--- a/src/Components/PageHeader/_style.scss
+++ b/src/Components/PageHeader/_style.scss
@@ -15,7 +15,7 @@
     font-weight: var(--font-weight-semibold);
     letter-spacing: var(--letter-spacing-wider);
     text-transform: uppercase;
-    color: var(--color-border-focus);
+    color: var(--color-text-accent);
 }
 
 .miever-page-header-row {
