--- a/src/Components/Select/_style.scss
+++ b/src/Components/Select/_style.scss
@@ -123,7 +123,7 @@
     }
 
     &-selected {
-        color: var(--color-border-focus);
+        color: var(--color-text-accent);
         font-weight: var(--font-weight-medium);
     }
 
